--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link href="css/stile.css" rel="stylesheet">
+    <script src="js/script.js"></script>
+
 </head>
 <body>
     <header>
@@ -31,7 +33,7 @@
             </ul>
         </aside>
         <section>
-            <header>
+            <header id="headerUtente">
                 <!-- Nome dell'utente e data/ora ultimo messaggio -->
                 <div class="material-symbols-outlined icone">
                     face
@@ -42,7 +44,7 @@
                 </div>
                 
             </header>
-            <section>
+            <section id="sectionMessaggi">
                 <!-- Messaggi degli utenti -->
                 <article class="mes ut1">Ciao &#128512</article>
                 <article class="mes ut2">Ciao</article>
